--- a/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
+++ b/src/app/modules/ClassSubject/classsubjectdetail/classsubjectdetail.component.html
@@ -13,7 +13,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubject(0)">
+            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetClassSubject(0)">
                 <mat-icon>search</mat-icon>
             </button>
             <button [disabled]="loading" matTooltip="copy from previous batch" class="mat-raised-button" 
