--- a/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
+++ b/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
@@ -21,7 +21,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubjectComponent(0)">
+        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetClassSubjectComponent(0)">
             <mat-icon>search</mat-icon>
         </button>
         <button [disabled]="loading" matTooltip="copy from previous batch" class="mat-raised-button"
