--- a/src/app/modules/auth/change-password/change-password.component.html
+++ b/src/app/modules/auth/change-password/change-password.component.html
@@ -7,7 +7,7 @@
         [formGroup]="changepwdForm" novalidate>
                 <mat-form-field>
                     <mat-label>Old Password</mat-label>
-                    <input type="password" matInput formControlName="OldPassword" autocomplete="Off"
+                    <input type="password" matInput formControlName="OldPassword" autocomplete="new-password"
                         required />
                     <!-- <div class="alert-danger" *ngIf="f.OldPassword.errors && f.submitted">
                         <div *ngIf="f.OldPassword.errors.required">Old password is required</div>
@@ -15,7 +15,7 @@
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>New Password</mat-label>
-                    <input type="password" matInput formControlName="NewPassword"
+                    <input type="password" matInput formControlName="NewPassword" autocomplete="new-password"
                         required/>
                     <!-- <div class="alert-danger" *ngIf="f.NewPassword.errors && f.submitted">
                         <div *ngIf="f.NewPassword.errors.required">New Password is required</div>
@@ -26,7 +26,7 @@
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label for="ConfirmPassword">ConfirmPassword</mat-label>
-                    <input type="password" matInput autocomplete="Off" formControlName="ConfirmPassword"
+                    <input type="password" matInput autocomplete="new-password" formControlName="ConfirmPassword"
                         required [maxlength]="20"/>
                     <!-- <div class="alert-danger" *ngIf="f.ConfirmPassword.errors && f.submitted">
                         <div *ngIf="f.ConfirmPassword.errors.required">Confirm password is required</div>
@@ -37,7 +37,7 @@
                 </mat-form-field>
                 <div class="form-group">
                     <button [disabled]="loading" 
-                    class="mat-raised-button"
+                    mat-raised-button color="accent"
                     (click)="onSubmit()"
                     matTooltip="change">
                         <mat-icon>change_circle</mat-icon>
