--- a/src/app/modules/auth/forgotpassword/forgotpassword.component.html
+++ b/src/app/modules/auth/forgotpassword/forgotpassword.component.html
@@ -13,7 +13,7 @@
                 To reset password, a link will be sent to your registered email address.           
                 <div style="margin: 30px 30px 30px 0px;">
                     <button [disabled]="loading" 
-                    class="mat-raised-button"
+                    mat-raised-button color="accent"
                     (click)="onSubmit()"
                     matTooltip="submit">
                         <mat-icon>change_circle</mat-icon>
