--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -22,7 +22,7 @@
                     matTooltip="login">
                         <mat-icon>login</mat-icon>
                     </button>
-                    <button [disabled]="loading" (click)="gotohome()" matTooltip="cancel" class="mat-raised-button">
+                    <button [disabled]="loading" (click)="gotohome()" matTooltip="cancel" mat-raised-button color="accent">
                         <mat-icon>cancel</mat-icon>
                     </button>
                 </div>
