--- a/src/app/modules/auth/resetpassword/resetpassword.component.html
+++ b/src/app/modules/auth/resetpassword/resetpassword.component.html
@@ -8,29 +8,17 @@
                
                 <mat-form-field>
                     <mat-label>New Password</mat-label>
-                    <input type="password" matInput formControlName="NewPassword"
-                        required/>
-                    <!-- <div class="alert-danger" *ngIf="f.NewPassword.errors && f.submitted">
-                        <div *ngIf="f.NewPassword.errors.required">New Password is required</div>
-                        <div *ngIf="f.NewPassword.errors.minlength">
-                            New Password must be at least 6 characters
-                        </div>
-                    </div> -->
+                    <input type="password" matInput formControlName="NewPassword" autocomplete="new-password"
+                        required/>                  
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label for="ConfirmPassword">ConfirmPassword</mat-label>
-                    <input type="password" matInput autocomplete="Off" formControlName="ConfirmPassword"
-                        required [maxlength]="20"/>
-                    <!-- <div class="alert-danger" *ngIf="f.ConfirmPassword.errors && f.submitted">
-                        <div *ngIf="f.ConfirmPassword.errors.required">Confirm password is required</div>
-                        <div *ngIf="f.ConfirmPassword!= f.NewPassword">
-                            The password and confirm password do not match
-                        </div>
-                    </div> -->
+                    <input type="password" matInput autocomplete="new-password" formControlName="ConfirmPassword"
+                        required [maxlength]="20"/>                
                 </mat-form-field>
                 <div class="form-group">
                     <button [disabled]="loading" 
-                    class="mat-raised-button"
+                    mat-raised-button color="accent"
                     (click)="onSubmit()"
                     matTooltip="reset password">
                         <mat-icon>change_circle</mat-icon>
