--- a/src/app/modules/classes/classprerequisite/classprerequisite.component.html
+++ b/src/app/modules/classes/classprerequisite/classprerequisite.component.html
@@ -15,7 +15,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetPrerequisites()">
+                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetPrerequisites()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
