--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
@@ -32,7 +32,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
+            <button [disabled]="loading" matTooltip="search" mat-raised-button color="accent"
                 (click)="GetApplicationFeatureRole()">
                 <mat-icon>search</mat-icon>
             </button>
