--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
@@ -16,7 +16,7 @@
                         </mat-option>
                     </mat-autocomplete>
                 </mat-form-field>
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetAppUsers()">
+                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetAppUsers()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
