--- a/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
+++ b/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
@@ -108,7 +108,7 @@
                         <mat-icon>checked</mat-icon>
                     </button> -->
                     <button [disabled]="loading" matTooltip="print" printSectionId="printSection"
-                        [useExistingCss]="true" ngxPrint class="mat-raised-button">
+                        [useExistingCss]="true" ngxPrint mat-raised-button color="accent">
                         <mat-icon>print</mat-icon>
                     </button>
                 </div>
