--- a/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
+++ b/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
@@ -143,18 +143,18 @@
                 </mat-grid-list>
             </div>
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-                <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" alt="previous"
+                <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" matTooltip="previous tab"
                     class="mat-raised-button">
                     <mat-icon>navigate_before</mat-icon>
                 </button>
-                <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="next"
+                <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" matTooltip="next tab"
                     class="mat-raised-button">
                     <mat-icon>navigate_next</mat-icon>
                 </button>
-                <button [disabled]="loading" (click)="back()" class="mat-raised-button">
+                <button [disabled]="loading" (click)="back()" class="mat-raised-button" matTooltip="go to search">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" class="mat-raised-button">
+                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" matTooltip="save" mat-raised-button color="accent">
                     <mat-icon>save</mat-icon>
                 </button>
             </mat-card-actions>
@@ -240,18 +240,18 @@
                 <!-- </span> -->
             </div>
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-                <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" alt="save"
+                <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" matTooltip="previous tab"
                     class="mat-raised-button">
                     <mat-icon>navigate_before</mat-icon>
                 </button>
-                <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="save"
+                <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" matTooltip="next tab"
                     class="mat-raised-button">
                     <mat-icon>navigate_next</mat-icon>
                 </button>
-                <button [disabled]="loading" (click)="back()" class="mat-raised-button">
+                <button [disabled]="loading" (click)="back()" class="mat-raised-button" matTooltip="back to search">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" class="mat-raised-button">
+                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" mat-raised-button color="accent">
                     <mat-icon>save</mat-icon>
                 </button>
             </mat-card-actions>
@@ -276,18 +276,18 @@
                 </mat-form-field>
             </div>
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-                <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" alt="previous"
+                <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" matTooltip="previous tab"
                     class="mat-raised-button">
                     <mat-icon>navigate_before</mat-icon>
                 </button>
-                <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" alt="next"
+                <button [disabled]="loading" *ngIf="selectedIndex<4" (click)="nextStep()" matTooltip="next tab"
                     class="mat-raised-button">
                     <mat-icon>navigate_next</mat-icon>
                 </button>
-                <button [disabled]="loading" (click)="back()" matTooltip="back" class="mat-raised-button">
+                <button [disabled]="loading" (click)="back()" matTooltip="go to search student" class="mat-raised-button">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" class="mat-raised-button">
+                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" mat-raised-button color="accent">
                     <mat-icon>save</mat-icon>
                 </button>
             </mat-card-actions>
@@ -341,12 +341,12 @@
                 <button [disabled]="loading" *ngIf="selectedIndex>0" (click)="previousStep()" alt="previous"
                     class="mat-raised-button">
                     <mat-icon>navigate_before</mat-icon>
-                </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" class="mat-raised-button">
-                    <mat-icon>save</mat-icon>
-                </button>
+                </button>                
                 <button [disabled]="loading" (click)="back()" alt="back" class="mat-raised-button">
                     <mat-icon>arrow_back</mat-icon>
+                </button>
+                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" mat-raised-button color="accent">
+                    <mat-icon>save</mat-icon>
                 </button>
             </mat-card-actions>
         </mat-tab>
