--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -39,7 +39,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetExamStudentSubjectResults()">
+                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetExamStudentSubjectResults()">
                     <mat-icon>search</mat-icon>
                 </button>
                 <!-- <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
