--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
@@ -32,7 +32,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>                   -->
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetSlotNClassSubjects()">
+                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetSlotNClassSubjects()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
