--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -22,7 +22,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button [disabled]="loading" class="mat-raised-button" (click)="GetStudentClasses('')">
+        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentClasses('')">
             <mat-icon>search</mat-icon>
         </button>
         <button [disabled]="loading" matTooltip="copy from previous class & previous batch" class="mat-raised-button"
