--- a/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
+++ b/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
@@ -21,7 +21,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button [disabled]="loading" class="mat-raised-button" (click)="GetStudentClassSubject()">
+        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentClassSubject()">
             <mat-icon>search</mat-icon>
         </button>
         <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
