--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -13,7 +13,7 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-    <button [disabled]="loading" matTooltip="search" class="mat-raised-button" (click)="GetClassMasters()">
+    <button [disabled]="loading" matTooltip="search" mat-raised-button color="accent" (click)="GetClassMasters()">
         <mat-icon>search</mat-icon>
     </button>
 </form>
