--- a/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.html
+++ b/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.html
@@ -21,7 +21,7 @@
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
-            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassTeacher(0)">
+            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetClassTeacher(0)">
                 <mat-icon>search</mat-icon>
             </button>
              <button [disabled]="loading" matTooltip="copy from previous batch" class="mat-raised-button"
