--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -20,13 +20,13 @@
                 <mat-option *ngFor="let item of Months" [value]="item.val">{{item.MonthName}}</mat-option>
             </mat-select>
         </mat-form-field>
-        <button [disabled]="loading" matTooltip="search" class="mat-raised-button" style="margin-right: 15px;"
+        <button [disabled]="loading" matTooltip="search" mat-raised-button color="accent" style="margin-right: 15px;"
             (click)="GetClassFee(StandardFilterWithBatchId,0)">
             <mat-icon>search</mat-icon>
         </button>
         <button [disabled]="loading" matTooltip="copy from previous batch" 
         style="margin-right: 15px;"
-        class="mat-raised-button" (click)="CopyFromPreviousBatch()">
+        mat-raised-button color="accent" (click)="CopyFromPreviousBatch()">
             <mat-icon>copy_all</mat-icon>
         </button>
         <button [disabled]="loading" matTooltip="create invoice" class="mat-raised-button" style="margin-right: 15px;"
