--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -23,7 +23,7 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-    <button [style.width.px]="80" [disabled]="loading" matTooltip="search" class="mat-raised-button"
+    <button [style.width.px]="80" [disabled]="loading" matTooltip="search" mat-raised-button color="accent"
         (click)="GetSearchMaster()">
         <mat-icon>search</mat-icon>
     </button>
@@ -101,7 +101,7 @@
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">
                 <button style="margin-right: 15px;"
                     [disabled]="loading || Permission=='read' || Parent=='Information Restriction'"
-                    matTooltip="new item" class="mat-raised-button" (click)="AddData()">
+                    matTooltip="new item" mat-raised-button color="accent" (click)="AddData()">
                     <mat-icon>add</mat-icon>
                 </button>
             </mat-header-cell>
@@ -113,7 +113,7 @@
         </ng-container>
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">
-                <button [disabled]="loading || Permission=='read'" matTooltip="save all" class="mat-raised-button"
+                <button [disabled]="loading || Permission=='read'" matTooltip="save all" mat-raised-button color="accent"
                     (click)="SaveAll()">
                     <mat-icon>all_out</mat-icon>
                 </button>
