--- a/src/app/modules/control/organization/organization.component.html
+++ b/src/app/modules/control/organization/organization.component.html
@@ -15,7 +15,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
+            <button [disabled]="loading" matTooltip="search" mat-raised-button color="accent"
                 (click)="GetOrganizationDetail()">
                 <mat-icon>search</mat-icon>
             </button>
