--- a/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
+++ b/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
@@ -14,7 +14,7 @@
                 </mat-option>
             </mat-autocomplete>
         </mat-form-field>
-        <button [disabled]="loading" class="mat-raised-button" (click)="GetRoleUser()">
+        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetRoleUser()">
             <mat-icon>search</mat-icon>
         </button>
     </form>
