--- a/src/app/modules/misc/calendar/calendar.component.html
+++ b/src/app/modules/misc/calendar/calendar.component.html
@@ -1,4 +1,4 @@
 <!-- <alert></alert> -->
-<full-calendar 
+<full-calendar style="margin:30px 30px 30px 0px"
 
 [options]="calendarOptions"></full-calendar>
