--- a/src/app/modules/misc/event/event.component.html
+++ b/src/app/modules/misc/event/event.component.html
@@ -18,7 +18,7 @@
                     <mat-header-cell *matHeaderCellDef>Event
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.EventName"
                                 [(ngModel)]="element.EventName" [maxlength]="100">
                         </mat-form-field>
@@ -28,7 +28,7 @@
                     <mat-header-cell *matHeaderCellDef>Description
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="200">
+                        <mat-form-field appearance="outline">
                             <textarea matInput (blur)="onBlur(element)" [value]="element.Description"
                                 [(ngModel)]="element.Description" [maxlength]="1000"></textarea>
                         </mat-form-field>
@@ -37,22 +37,29 @@
                 <ng-container matColumnDef="EventStartDate">
                     <mat-header-cell *matHeaderCellDef> Start </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
-                            <input [value]="element.EventStartDate" [(ngModel)]="element.EventStartDate" matInput
-                                [matDatepicker]="EventStartDate" autocomplete="off">
-                            <mat-datepicker-toggle matSuffix [for]="EventStartDate"></mat-datepicker-toggle>
-                            <mat-datepicker #EventStartDate></mat-datepicker>
+                        <mat-form-field appearance="outline">
+                            <input [value]="element.EventStartDate" 
+                            matInput
+                            [(ngModel)]="element.EventStartDate" 
+                            [ngxMatDatetimePicker]="EventStartDate" autocomplete="off">
+                            <mat-datepicker-toggle matSuffix [for]="$any(EventStartDate)"></mat-datepicker-toggle>
+                            <ngx-mat-datetime-picker #EventStartDate [showSpinners]="true" [showSeconds]="false"
+                                [stepHour]="1" [stepMinute]="1" [stepSecond]="1" [touchUi]="false"
+                                [enableMeridian]="true"
+                                >
+                            </ngx-mat-datetime-picker>
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="EventEndDate">
                     <mat-header-cell *matHeaderCellDef> End </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <input [value]="element.EventEndDate" [(ngModel)]="element.EventEndDate" matInput
-                                [matDatepicker]="EventEndDate" autocomplete="off">
-                            <mat-datepicker-toggle matSuffix [for]="EventEndDate"></mat-datepicker-toggle>
-                            <mat-datepicker #EventEndDate></mat-datepicker>
+                                [ngxMatDatetimePicker]="EventEndDate" autocomplete="off">
+                            <mat-datepicker-toggle matSuffix [for]="$any(EventEndDate)"></mat-datepicker-toggle>
+                            <ngx-mat-datetime-picker #EventEndDate [showSpinners]="true" [showSeconds]="false">
+                            </ngx-mat-datetime-picker>
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -60,7 +67,7 @@
                     <mat-header-cell *matHeaderCellDef>Venue
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline" [style.width.px]="150">
+                        <mat-form-field appearance="outline">
                             <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.Venue"
                                 [(ngModel)]="element.Venue" [maxlength]="256">
                         </mat-form-field>
