--- a/src/app/modules/misc/event/event.component.scss
+++ b/src/app/modules/misc/event/event.component.scss
@@ -1,13 +1,15 @@
-
+mat-form-field{
+    width: 98%;
+}
 .mat-column-Id,.mat-column-Active,.mat-column-Action{
-    flex:1 0 70px;
+    flex:0 0 70px;
     justify-content: center;
 }
 .mat-column-EventName,.mat-column-Venue,.mat-column-EventStartDate,.mat-column-EventEndDate{
-    flex:1 0 150px;
+    flex:0 0 180px;
 }
 .mat-column-Description{
-    flex:1 0 200px;
+    flex:0 0 250px;
 }
 table {
     width: 100%;
