--- a/src/app/modules/schoolreports/studentprofilereport/studentprofilereport.component.html
+++ b/src/app/modules/schoolreports/studentprofilereport/studentprofilereport.component.html
@@ -38,33 +38,44 @@
 
                 <ng-container matColumnDef="expandedDetail">
                     <mat-cell *matCellDef="let row"
-                        style="display: flex;flex-direction: column;justify-content: space-between; padding-bottom: 15px;">
-                        
-                        <div style="display:flex;flex-direction: row;justify-content: space-between;align-items: flex-end;width: 100%;"
-                            *ngFor="let item of row.element.Profile;let indx=index">
-                            <div style="display: flex;flex-direction: column;justify-content: end; min-width: 600px;width: 100%;">
-                                <div>{{item.Description}}</div>
-                                <div *ngIf="item.RatingId==null"
-                                    style="padding: 15px;margin: 15px 15px 15px 0px; width: 100%;border: 1px solid lightgray;">
-                                    {{item.Detail}}</div>
-                            </div>
-                            <div *ngIf="item.RatingId!=null" style="display: flex;flex-direction: column; display:flex;justify-content: end;width: 400px;">
-                                <span *ngIf="indx==0"
-                                    style="display:flex;flex-direction: row; justify-content: space-between;align-items: center;width: 400px;">
-                                    <span
-                                        style="padding:15px;align-items: center; height:100px;border: 1px solid lightgray; display:flex;writing-mode:vertical-rl;transform: rotateY(0deg) rotate(-35deg);"
-                                        *ngFor="let rate of row.element.Profile[0].Ratings">
-                                        {{rate.MasterDataName}}
-                                    </span>
+                        style="display: flex;flex-direction: column;justify-content: space-around; padding-bottom: 15px;">
+                        <span style="display: flex;flex-direction: row;justify-content: space-around;width: 100%;">
+                            <span
+                                style="display: flex;flex-direction: column;justify-content: end; min-width: 600px;width: 100%;">
+                                &nbsp;
+                            </span>
+                            <span *ngIf="row.element.Profile[0].Ratings.length>0"
+                                style="border-bottom:1px solid lightgray; display:flex;flex-direction: row; justify-content: space-around;align-items: center;min-width: 400px;">
+                                <span
+                                    style="font-size:smaller; padding:5px;border-radius: 5px; align-items: center; height:70px;display:flex;writing-mode:vertical-rl;transform: rotateY(0deg) rotate(-35deg);"
+                                    *ngFor="let rate of row.element.Profile[0].Ratings">
+                                    {{rate.MasterDataName}}
                                 </span>
-                                <mat-radio-group [disabled]="true" name="ratings"
-                                    style="display:flex;justify-content: center;">
-                                    <mat-radio-button *ngFor="let rate of item.Ratings"
-                                        style="padding:5px 5px 0px 30px;width:100px; border:1px solid lightgray"
-                                        [checked]="rate.MasterDataId==item.RatingId?true:false"
-                                        [value]="rate.MasterDataId">
-                                    </mat-radio-button>
-                                </mat-radio-group>
+                            </span>
+                        </span>
+
+                        <div style="display:flex;flex-direction: row;justify-content: space-around;align-items: flex-end;width: 100%;"
+                            *ngFor="let item of row.element.Profile;let indx=index">
+                            <div [ngClass]="item.RatingId>0?'normalwidth':'minwidth'">
+                                <div style="min-width: 600px">{{item.Description}}</div>
+                                <div *ngIf="item.RatingId==0"
+                                    style="padding: 15px;margin: 15px 15px 15px 0px; width: 100%;border: 1px solid lightgray;">
+                                    {{item.Detail}}
+                                </div>
+                            </div>
+                            <div
+                                style="display: flex;flex-direction: column; display:flex;justify-content: end;width: 400px;">
+
+                                <span *ngIf="item.RatingId>0">
+                                    <mat-radio-group [disabled]="true" name="ratings"
+                                        style="display:flex;justify-content: center;">
+                                        <mat-radio-button *ngFor="let rate of item.Ratings"
+                                            style="padding:10px 5px 0px 40px;width:100px; border:1px solid lightgray"
+                                            [checked]="rate.MasterDataId==item.RatingId?true:false"
+                                            [value]="rate.MasterDataId">
+                                        </mat-radio-button>
+                                    </mat-radio-group>
+                                </span>
                             </div>
                         </div>
                     </mat-cell>
