--- a/src/app/modules/student/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/student/addstudentclass/addstudentclass.component.html
@@ -87,11 +87,11 @@
 
     </form>
 <!-- </div> -->
-<mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-    <button [disabled]="loading" class="mat-raised-button" (click)="UpdateOrSave()">
-        <mat-icon>save</mat-icon>
-    </button>
+<mat-card-actions fxLayout="row" fxLayoutAlign="center center">    
     <button [disabled]="loading" class="mat-raised-button" (click)="back()">
         <mat-icon>arrow_back</mat-icon>
+    </button>
+    <button [disabled]="loading" mat-raised-button color="accent" (click)="UpdateOrSave()">
+        <mat-icon>save</mat-icon>
     </button>
 </mat-card-actions>
