--- a/src/app/modules/studentexam/examslot/examslot.component.html
+++ b/src/app/modules/studentexam/examslot/examslot.component.html
@@ -21,7 +21,7 @@
                     <mat-datepicker-toggle matSuffix [for]="ExamDate"></mat-datepicker-toggle>
                     <mat-datepicker #ExamDate></mat-datepicker>
                 </mat-form-field>      
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetExamSlots()">
+                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetExamSlots()">
                     <mat-icon>search</mat-icon>
                 </button>
                 <!-- <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
