--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,11 +1,9 @@
-<!-- <mat-toolbar [ngClass]="{'width81':!deviceXs,'width100':deviceXs}"> -->
 <mat-toolbar>
-    <mat-toolbar-row class="width100" fxLayout="row" fxLayoutAlign="space-between center" style="box-shadow: 5px 5px 5px #888888;">
+    <mat-toolbar-row class="width100" fxLayout="row" fxLayoutAlign="space-between center">
         <div style="margin:10px 10px 10px 15px;" fxLayout="row" fxLayoutAlign="start center">
             <a [routerLink]="['/']"><img style="border-radius: 20px;" src="{{logoPath}}" alt="{{OrganizationName}}"
                     width="40px" /></a>
             <span>{{SelectedApplicationName}}</span>
-            <!-- <span *ngIf="SelectedBatchName"> - {{SelectedBatchName}}</span>             -->
         </div>
         <div fxLayout="row" fxLayoutAlign="space-between center">
             <div style="font-size: medium;margin-right: 15px;">{{userName}}</div>
@@ -27,9 +25,6 @@
                 <button [disabled]="loading" mat-menu-item *ngIf="!loggedIn" (click)="createlogin()">
                     <mat-icon>create</mat-icon>Sign Up
                 </button>
-                <button [disabled]="loading" mat-menu-item *ngIf="loggedIn" (click)="addUser()">
-                    <mat-icon>user</mat-icon>Add User
-                </button>
                 <button [disabled]="loading" mat-menu-item *ngIf="loggedIn" (click)="changepassword()">
                     <mat-icon>change_circle</mat-icon>Change password
                 </button>
@@ -38,36 +33,10 @@
                 </button>
             </mat-menu>
         </div>
-    </mat-toolbar-row>
-    <!-- <mat-toolbar-row>hi</mat-toolbar-row> -->
-    <!-- <mat-toolbar-row fxLayout="row" fxLayoutAlign="end center"
-        fxLayoutGap="15px" style="background-color:lightgoldenrodyellow">
-        <span style="margin-right: 10px;font-size:medium;color:black">
-            <form [formGroup]="searchForm">
-                <mat-form-field [style.width.px]="250">
-                    <mat-select formControlName="searchApplicationId" (selectionChange)="ChangeApplication($event)">
-                        <mat-option *ngFor="let item of PermittedApplications" [value]="item.applicationId">
-                            {{item.applicationName}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field [style.width.px]="130">
-                    <mat-select formControlName="searchBatchId" (selectionChange)="ChangeCurrentBatchId($event)">
-                        <mat-option *ngFor="let item of Batches" [value]="item.BatchId">{{item.BatchName}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </form>
-        </span>
-    </mat-toolbar-row> -->
+    </mat-toolbar-row>    
     <mat-toolbar-row fxShow.gt-xs fxHide.gt-xs
         style="height: 70px !important;box-shadow: 3px 3px 3px var(--maincolor2);" fxLayout="row wrap"
         fxLayoutAlign="space-between center">
-        <!-- <div style="padding-left: 70px;padding-bottom: 10px;" fxLayout="row" fxLayoutAlign="center center">             
-           
-            <span><strong>ST. PAUL'S INSTITUTE</strong></span>            
-        </div> -->
-        <!-- <button [disabled]="loading" mat-button (click)="newsNEvents()">
-            <mat-icon>announcement</mat-icon><span style="color: white;">News & Events</span>
-        </button> -->
         <button [disabled]="loading" mat-button (click)="contactus()">
             <mat-icon>contact_support</mat-icon><span>Contact Us</span>
         </button>
