--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Ewert&display=swap');
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
+@import '~@angular/material/theming';
+@include mat-core();
+$bv-brand: (
+    50: #ffffff,
+    100: #dde6f3,
+    200: #b4c9e4,
+    300: #7fa3d1,
+    400: #6992c9,
+    500: #5282c1,
+    600: #4072b4,
+    700: #38649d,
+    800: #305687,
+    900: #284770,
+    A100: #ffffff,
+    A200: #dde6f3,
+    A400: #6992c9,
+    A700: #38649d,
+    contrast: (
+        50: $black-87-opacity,
+        100: $black-87-opacity,
+        200: $black-87-opacity,
+        300: $black-87-opacity,
+        400: $black-87-opacity,
+        500: white,
+        600: white,
+        700: white,
+        800: white,
+        900: white,
+        A100: $black-87-opacity,
+        A200: $black-87-opacity,
+        A400: $black-87-opacity,
+        A700: white,
+    )
+);
+
+$my-app-primary: mat-palette($mat-indigo);
+// Accent colour
+$my-app-accent: mat-palette($mat-lime, 500, 100, 100);
+
+$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent);
+@include angular-material-theme($my-app-theme);
+
+//$my-app-theme: mat-dark-theme($my-app-primary, $my-app-accent);
+//@include angular-material-theme($my-app-theme);
+
+
 :root {
     --maincolor1: #1E4A75;
     --maincolor2: #00203F;
