--- a/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
+++ b/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
@@ -4,7 +4,14 @@
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <div style="padding: 15px;" fxLayout="row wrap">
     <div style="width: 100%;">
-        <mat-table #table [dataSource]="dataSource">
+        <mat-table #table [dataSource]="dataSource" matSort>            
+            <ng-container matColumnDef="AnswerOptionsId">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Id
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                   {{element.AnswerOptionsId}}
+                </mat-cell>
+            </ng-container>
             <ng-container matColumnDef="Title">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Title
                 </mat-header-cell>
