--- a/src/app/modules/evaluation/evaluationboard/evaluationboard.component.html
+++ b/src/app/modules/evaluation/evaluationboard/evaluationboard.component.html
@@ -1,17 +1,19 @@
-
 <mat-card>
-    <mat-card-title style="margin: 20px;">Employee</mat-card-title>
-    <mat-card-subtitle style="margin:0px 20px 20px 20px;background-color: lightgray;padding: 10px;">{{EmployeeName}}</mat-card-subtitle>
-    <mat-card-content style="margin:20px;max-height: inherit;">
+    <mat-card-title style="margin:20px">Evaluation</mat-card-title>
+    <mat-card-subtitle></mat-card-subtitle>
+    <mat-card-content style="margin:20px">
+
         <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
-                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
+                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
                 </ng-template>
                 <ng-template matTabContent>
                     <div #container></div>
                 </ng-template>
             </mat-tab>
         </mat-tab-group>
+
+
     </mat-card-content>
 </mat-card>
