--- a/src/app/modules/globaladmininitial/customerplans/customerplans.component.html
+++ b/src/app/modules/globaladmininitial/customerplans/customerplans.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex;flex-direction: column;margin: 50px;">
+<div style="display: flex;flex-direction: column;">
     <div style="padding:15px 15px 10px 15px;">
         <div><strong>Organisation Plan</strong></div>
     </div>
@@ -68,7 +68,7 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="PersonOrItemCount">
-                    <mat-header-cell *matHeaderCellDef>Person Or ItemCount
+                    <mat-header-cell *matHeaderCellDef>No. Of Students
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
@@ -120,7 +120,7 @@
                     <mat-header-cell *matHeaderCellDef>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading || !element.Action || SelectedCustomer=='TTP'" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
